# QonGPU

./: .gitignore  .gitmodules  .locals.el  CMakeLists.txt  README.md  configure.sh  module_setup  todo.org
jobsh/: job.sh  statschr_1e4  stderr_1  stdout_1  z1_lvl  z3_lvl
src/: CMakeLists.txt  Energylevels.ipynb  Output.ipynb  configure.sh  job  modules
src/QonGPU/: CMakeLists.txt  main.cu
src/QonGPU/include/: AllHeader.hpp  SimDef.hpp
src/QonGPU/include/alloc/: Allocator.hpp
src/QonGPU/include/dynamic/: CNKernels.h  ComplexOperators.h  CrankNicholson1D.cpp  CrankNicholson1D.hpp  CrankNicolson1D.cpp  CrankNicolson1D.hpp  MatrixGeneration.h  MemFunctors.h  ThomasSerial.h  TimeOperator.hpp  TimeOperator1D.hpp  TimeOperator2D.hpp  TridiagMult.h  spike_host.cu  spike_kernel.hxx
src/QonGPU/include/dynamic/tests/: test1.cu
src/QonGPU/include/output/: IOHandle1D.cpp  IOHandle1D.h
src/QonGPU/include/params/: Params.hpp  Params1D.hpp  Params2D.hpp
src/QonGPU/include/potentials/: Core1D.hpp  Potential.hpp  Potential2D.hpp  Potential3D.hpp
src/QonGPU/include/static/: Numerov.cpp  Numerov.hpp  Numerov1D.hpp  StaticSolver2D.hpp  StaticSolver3D.hpp
src/SchroedingerSolver/: CMakeLists.txt  Energylevels.ipynb  Output.ipynb  clean  configure.sh  main.cu  qsolve  todo.org
src/SchroedingerSolver/include/: AllHeader.hpp  SimDef.hpp
src/SchroedingerSolver/include/dynamic/: CNKernels.h  CrankNicholson1D.cpp  CrankNicholson1D.hpp  TimeOperator.hpp  TimeOperator1D.hpp  TimeOperator3D.hpp
src/SchroedingerSolver/include/dynamic/tests/: multiplytest.ipynb  test1.cu
src/SchroedingerSolver/include/output/: IOHandle.hpp  IOHandle1D.cpp  IOHandle1D.h  IOHandle1D.hpp
src/SchroedingerSolver/include/params/: Params.hpp  Params1D.hpp  Params3D.hpp
src/SchroedingerSolver/include/potentials/: Potential.hpp  Potential1D.hpp
src/SchroedingerSolver/include/static/: .#StaticSolver.hpp  Numerov.cpp  Numerov.hpp  Numerov1D.hpp  StaticSolver.hpp  StaticSolver1D.hpp
src/pyscripts/: 1s.ipynb  90_AU_ELEVEL.ipynb  CN_reimpl.py  Coefficients.ipynb  Dipolmoment.ipynb  Elevel.py  Energylevels.ipynb  FFT-POT.ipynb  Graphicscript.py  Heatmap.ipynb  Heatmap_Backup.ipynb  Level2.py  Matrixcheck.ipynb  Modelvscoulomb.ipynb  Output.ipynb  Potential Heatmap.ipynb  Qutils.py  Static_pictures.ipynb  TimeDebug.py  dens-current.py  heatmap.py  linear_disturbance.ipynb  numerov_backwards.py  prob-dens-curr.ipynb  prob_density.ipynb  probability_current.ipynb  time_disturbance.ipynb  tscr.ipynb
src/sesoc/1dim/: 1dim  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CMakelists.txt~  Makefile  cmake_install.cmake  main.cu  main.cu~
src/sesoc/1dim/include/: DataInit.hpp  DataInit.hpp~  Definition.hpp  DeviceAlloc.hpp~  DevicePull.hpp  DevicePull.hpp~  DevicePusher.hpp  DevicePusher.hpp~  NumerovKernel.hpp  NumerovKernel.hpp~  Potential.hpp  Potential.hpp~  StaticSolver.hpp
